fix path logic in tests